# mtail

./: .bazelrc  .cirrus.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .golangci.yml  .goreleaser.yml  .releaserc.js  .travis.yml  AGENTS.md  BUILD.bazel  Building.md  BuildingEmtail.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Deploying.md  DeployingEmtail.md  Dockerfile  Dockerfile.goreleaser  EmtailLanguage.md  Home.md  ISSUE_TEMPLATE.md  Interoperability.md  Language.md  MODULE.bazel  Makefile  Metrics.md  Programming-Guide.md  README.md  TODO  Testing.md  asm.go  ast.go  bench_test.go  benchmark_results.csv  collectd.go  compiler.go  compiler_test.go  debug.go  debug_go17.go  (+42 more)
.circleci/: config.yml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
cmd/mdot/: BUILD.bazel  main.go  mdot.go
cmd/mfmt/: BUILD.bazel  main.go
cmd/mgen/: BUILD.bazel  main.go
cmd/mtail/: BUILD.bazel  main.go  mtail.go
compiler/: ast.go  compiler.go  compiler_test.go  lexer.go  lexer_test.go  parser.y  parser_test.go  symtab.go  unparser.go
debian/: README  README.Debian  README.source  changelog  control  copyright  default  dirs  docs  gbp.conf  gitlab-ci.yml  init  install  mtail.install  mtail.lintian-overrides  postinst  postrm  rules  watch
docs/: Building.md  Deploying.md  Interoperability.md  Language.md  Metrics.md  Programming-Guide.md  Testing.md  Troubleshooting.md  faq.md  (+6 more)
internal/exporter/: BUILD.bazel  collectd.go  export.go  export_test.go  graphite.go  graphite_test.go  json.go  json_test.go  otel.go  otel_test.go  prometheus.go  prometheus_test.go  statsd.go  varz.go  varz_test.go
internal/metrics/: BUILD.bazel  metric.go  metric_test.go  store.go  store_bench_test.go  store_test.go  testing.go  type.go
internal/metrics/datum/: BUILD.bazel  buckets.go  buckets_test.go  datum.go  datum_test.go  float.go  int.go  int_test.go  string.go
internal/mtail/: BUILD.bazel  basic_tail_integration_test.go  benchmarks_test.go  buildinfo.go  compile_only_integration_test.go  examples_integration_test.go  examples_integration_unix_test.go  exec_integration_test.go  glob_relative_after_start_integration_test.go  httpstatus.go  log_delete_integration_test.go  log_deletion_integration_test.go  log_deletion_integration_unix_test.go  log_glob_integration_test.go  log_rotation_integration_test.go  log_rotation_integration_unix_test.go  log_truncation_integration_test.go  logo.ico.go  mtail.go  mtail_test.go  multiple_levels_directory_integration_test.go  multiple_lines_integration_test.go  new_prog_integration_test.go  options.go  partial_line_integration_test.go  permission_denied_integration_test.go  permission_denied_integration_unix_test.go  prog_load_integration_test.go  read_pipe_integration_test.go  read_pipe_integration_unix_test.go  relative_path_pattern_integration_test.go  soft_link_change_integration_test.go  source_mapping_integration_test.go  testing.go  truncate_integration_test.go  unix_socket_export_integration_test.go
internal/mtail/golden/: BUILD.bazel  reader.go  reader_test.go
internal/mtail/testdata/: apache-combined.golden  apache-common.golden  decorator.golden  else.golden  ip-addr.golden  lighttpd_accesslog.golden  mysql_slowqueries.golden  ntp4.golden  rsyncd.golden  sftp_chroot.golden  vsftpd_log  vsftpd_log.golden  vsftpd_xferlog  vsftpd_xferlog.golden  xntp3_peerstats
internal/runtime/: BUILD.bazel  fuzz.go  httpstatus.go  loader.go  loader_test.go  options.go  runtime.go  runtime_integration_test.go  runtime_test.go  source_mapping_test.go  types.go  vm.go  vm_integration_test.go  vm_test.go
internal/runtime/code/: BUILD.bazel  instr.go  instr_test.go  object.go  opcodes.go  opcodes_test.go
internal/runtime/compiler/: BUILD.bazel  compiler.go  compiler_test.go
internal/runtime/compiler/ast/: BUILD.bazel  ast.go  walk.go  walk_test.go
internal/runtime/compiler/checker/: BUILD.bazel  checker.go  checker_test.go
internal/runtime/compiler/codegen/: BUILD.bazel  codegen.go  codegen_test.go
internal/runtime/compiler/errors/: BUILD.bazel  errors.go  errors_test.go
internal/runtime/compiler/opt/: BUILD.bazel  opt.go  opt_test.go
internal/runtime/compiler/parser/: BUILD.bazel  driver.go  lexer.go  lexer_test.go  parser.go  parser.y  parser_test.go  sexp.go  tokens.go  tokens_test.go  unparser.go  y.output
internal/runtime/compiler/position/: BUILD.bazel  position.go
internal/runtime/compiler/symbol/: BUILD.bazel  symtab.go  symtab_test.go
internal/runtime/compiler/types/: BUILD.bazel  types.go  types_test.go
internal/runtime/fuzz/: 1.mtail  capref-double-regexp-in-cond.mtail  const-a.mtail  const-as-cond.mtail  const-unused.mtail  datum-string-concat.mtail  match-to-int.mtail  negate-none.mtail  recursion-depth.mtail  retval-from-dec.mtail  uninitialised.mtail
internal/runtime/vm/: BUILD.bazel  vm.go  vm_test.go
internal/tailer/: BUILD.bazel  file.go  file_test.go  httpstatus.go  log.go  socket.go  status.go  tail.go  tail_test.go  tail_unix_test.go  tail_windows_test.go  testing.go
internal/tailer/logstream/: BUILD.bazel  awss3.go  awss3_test.go  base.go  cancel.go  decode.go  dgramstream.go  dgramstream_test.go  dgramstream_unix_test.go  fifostream.go  fifostream_unix_test.go  filestream.go  filestream_test.go  filestream_unix_test.go  kafka.go  kafka_config_generated.go  kafka_test.go  logstream.go  logstream_test.go  logstream_unix_test.go  pipestream.go  pipestream_test.go  pipestream_unix_test.go  reader.go  reader_test.go  s3_config_generated.go  socketstream.go  socketstream_test.go  socketstream_unix_test.go  udpsocketstream.go  udpsocketstream_test.go
internal/tailer/waker/: testwaker.go  testwaker_test.go  timedwaker.go  timedwaker_test.go
internal/testutil/: BUILD.bazel  diff.go  err.go  expvar.go  file.go  flag.go  fs.go  lines.go  norace.go  port.go  race.go  reader.go  reader_test.go  root.go  short.go  stdin.go  timeout.go  timeout_test.go
internal/testutil/golden/: reader.go
internal/waker/: BUILD.bazel  testwaker.go  testwaker_test.go  timedwaker.go  timedwaker_test.go  waker.go
release/: BUILD.bazel
(+302 files in other folders)
