module(
    name = "mtail",
    version = "3",
)

bazel_dep(name = "rules_go", version = "0.54.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

# https://github.com/bazel-contrib/rules_go/blob/master/go/nogo.rst
# Like golangci-lint, but integrated into the build.
go_sdk.nogo(nogo = "//:nogo")

bazel_dep(name = "gazelle", version = "0.43.0")

# Update dependencies with
# `bazel run //:gazelle`.
# and then
# `bazel run @rules_go//go -- mod tidy`
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_glog",
    "com_github_golang_groupcache",
    "com_github_google_go_cmp",
    "com_github_pkg_errors",
    "com_github_prometheus_client_golang",
    "com_github_prometheus_common",
    "io_opencensus_go",
    "io_opencensus_go_contrib_exporter_jaeger",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "org_golang_x_sys",
    "org_golang_x_tools",
)

# `rules_oci` and `aspect_bazel_lib`'s `tar` for making container images.
bazel_dep(name = "aspect_bazel_lib", version = "2.17.1")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "platforms", version = "1.0.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:cef75d12148305c54ef5769e6511a5ac3c820f39bf5c8a4fbfd5b76b4b8da843",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8")

# `rules_pkg` for making releases
bazel_dep(name = "rules_pkg", version = "1.1.0")
