module(
    name = "mtail",
    version = "3",
)

bazel_dep(name = "rules_go", version = "0.60.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

# https://github.com/bazel-contrib/rules_go/blob/master/go/nogo.rst
# Like golangci-lint, but integrated into the build.
go_sdk.nogo(nogo = "//:nogo")

bazel_dep(name = "gazelle", version = "0.51.0")

# Update dependencies with
# `bazel run //:gazelle`.
# and then
# `bazel run @rules_go//go -- mod tidy`
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_glog",
    "com_github_golang_groupcache",
    "com_github_google_go_cmp",
    "com_github_pkg_errors",
    "com_github_prometheus_client_golang",
    "com_github_prometheus_common",
    "io_opencensus_go",
    "io_opencensus_go_contrib_exporter_jaeger",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "org_golang_x_sys",
    "org_golang_x_tools",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_img", version = "0.3.11")
bazel_dep(name = "platforms", version = "1.1.0")

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "distroless_base",
    digest = "sha256:c83f022002fc917a92501a8c30c605efdad3010157ba2c8998a2cbf213299201",
    layer_handling = "lazy",
    registry = "gcr.io",
    repository = "distroless/base",
)

# `rules_pkg` for making releases
bazel_dep(name = "rules_pkg", version = "1.2.0")
