load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mdot_lib",
    srcs = ["main.go"],
    importpath = "github.com/jaqx0r/mtail/cmd/mdot",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/mtail",
        "//internal/runtime/compiler/ast",
        "//internal/runtime/compiler/checker",
        "//internal/runtime/compiler/parser",
        "@com_github_golang_glog//:glog",
    ],
)

go_binary(
    name = "mdot",
    embed = [":mdot_lib"],
    visibility = ["//visibility:public"],
)
