load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mtail",
    srcs = [
        "buildinfo.go",
        "httpstatus.go",
        "mtail.go",
        "options.go",
        "testing.go",
    ],
    embedsrcs = ["logo.ico"],
    importpath = "github.com/jaqx0r/mtail/internal/mtail",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/exporter",
        "//internal/logline",
        "//internal/metrics",
        "//internal/metrics/datum",
        "//internal/runtime",
        "//internal/tailer",
        "//internal/testutil",
        "//internal/waker",
        "@com_github_golang_glog//:glog",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/collectors",
        "@com_github_prometheus_client_golang//prometheus/collectors/version",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_prometheus_common//version",
        "@io_opencensus_go//trace",
        "@io_opencensus_go//zpages",
        "@io_opencensus_go_contrib_exporter_jaeger//:jaeger",
    ],
)

go_test(
    name = "mtail_test",
    size = "small",
    srcs = [
        "basic_tail_integration_test.go",
        "compile_only_integration_test.go",
        "examples_integration_test.go",
        "examples_integration_unix_test.go",
        "exec_integration_test.go",
        "log_deletion_integration_unix_test.go",
        "log_glob_integration_test.go",
        "log_rotation_integration_test.go",
        "log_rotation_integration_unix_test.go",
        "log_truncation_integration_test.go",
        "mtail_test.go",
        "multiple_levels_directory_integration_test.go",
        "multiple_lines_integration_test.go",
        "partial_line_integration_test.go",
        "permission_denied_integration_unix_test.go",
        "prog_load_integration_test.go",
        "read_pipe_integration_unix_test.go",
        "relative_path_pattern_integration_test.go",
        "unix_socket_export_integration_test.go",
    ],
    data = glob(["testdata/**"]) + [
        "//cmd/mtail",
        "//examples",
    ],
    embed = [":mtail"],
    deps = [
        "//internal/metrics",
        "//internal/metrics/datum",
        "//internal/mtail/golden",
        "//internal/testutil",
        "//internal/waker",
        "@com_github_golang_glog//:glog",
        "@rules_go//go/tools/bazel",
    ] + select({
        "@rules_go//go/platform:aix": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:darwin": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:dragonfly": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:freebsd": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:illumos": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:ios": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:netbsd": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:openbsd": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:solaris": [
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)
