load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "errors",
    srcs = ["errors.go"],
    importpath = "github.com/jaqx0r/mtail/internal/runtime/compiler/errors",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/runtime/compiler/position",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "errors_test",
    size = "small",
    srcs = ["errors_test.go"],
    deps = [":errors"],
)
